2011-08-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3398337 ] Namespaces of filter and handler for IndSub not checked

2011-08-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c: 
	[ 3393324 ] sfcb process abort in IndCIMXMLHandlerInvokeMethod

2011-08-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 3386391 ] HOST_NAME_MAX undefined

2011-06-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3274893 ] For SFCB 1.4, set SequenceIdentifier as described in DSP1054 1.2.
	Fixed some warnings and a extra free.

2011-06-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3328763 ] deactivateFilter() doesn't release CMPI object

2011-06-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, interopProvider.c, sfcBroker.c, control.h,
	test/TestProviders/tests/IndRetryTest.sh:
	[ 3274893 ] For SFCB 1.4, set SequenceIdentifier as described in DSP1054 1.2.

2011-06-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* mlog.c:
	[ 3323419 ] sfcb local interface causes zombie/defunct client processes
	(patch by Chris Poblete)

	* brokerUpc.c:
	[ 3324578 ] getInstance() up call does not close provider context
	(patch by Santosh Bidaralli)

2011-06-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* trace.c:
	[ 3324265 ] _sfcb_trace may deref NULL pointers

	* support.c:
	[ 3324255 ] Unnecessary NULL check in __cleanup_mt()

	* providerDrv.c:
	[ 3324247 ] Unnecessary NULL check in providerDrv

	* objectpath.c:
	[ 3324198 ] getObjectPath() may deref a NULL pointer

	* objectImpl.c:
	[ 3324192 ] Erroneous condition in loop in objectImpl:locateParameter()

	* interopServerProvider.c:
	[ 3324168 ] gatherNameSpacesData() may closedir() a NULL pointer

	* indCIMXMLHandler.c:
	[ 3324131 ] indCIMXMLHandler may return uninitialized CMPIStatus

	* providerDrv.c:
	[ 3324214 ] Remove dead code from providerDrv:loadProvider()

	* httpAdapter.c: